--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,18 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+
+# Boundary CLI binaries
+Boundary-cli/*
+
+# Node modules
+node_modules/*
+
+# MacOS
+.DS_Store
+
+# Logs files
+logs/*
+
+# Tests results
+test_results/*
