--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,106 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Test binary, built with `go test -c`
-*.test
+# Production builds
+dist/
+build/
 
-# Code coverage profiles and other test artifacts
-*.out
-coverage.*
-*.coverprofile
-profile.cov
+# Tauri
+src-tauri/target/
+src-tauri/Cargo.lock
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Go workspace file
-go.work
-go.work.sum
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# env file
+# Logs
+*.log
+logs/
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Temporary folders
+tmp/
+temp/
+
+# Cache directories
+.cache/
+.parcel-cache/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
 .env
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
 
-# Boundary CLI binaries
-Boundary-cli/*
+# Tauri specific
+src-tauri/gen/
+src-tauri/capabilities/
+WixTools/
 
-# Node modules
-node_modules/*
+# macOS specific
+*.app
+*.dmg
 
-# MacOS
-.DS_Store
+# Windows specific
+*.msi
+*.exe
 
-# Logs files
-logs/*
+# Linux specific
+*.deb
+*.rpm
+*.AppImage
 
-# Tests results
-test_results/*
+# Boundary CLI
+boundary-cli/*
